--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   text-align: center;
+  padding-top: 130px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.product {
+  width: 25vw;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 0 0 rgba(17, 17, 17, 0.425),
+    1px 1px 10px 1px rgba(0, 0, 0, 0.171);
+  background-color: rgb(255, 255, 255);
+  overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+
+header {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 70px;
+background-color: lightblue;
+display: flex;
+justify-content: center;
+padding: 5px;
+z-index: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h5, p {
+  font-size: 0.9rem;
+  padding: 0px 20px;
+  overflow: inherit;
+}
+
+button {
+  display: block;
+  width: 100%;
+  padding: 16px;
+  color: blanchedalmond;
+  background-color: rgb(96, 153, 218);
+  border-width: 0;
+  font-size: 1.3rem;
+  outline: none;
+}
+
+button:hover {
+  background-color: rgba(22, 22, 197, 0.808);
+}
+
+button:active {
+  border-style: hidden;
+  border-width: 0;
+  background-color: rgb(14, 10, 128);
+  box-shadow: none;
+  outline: none;
+}
+
+img {
+  padding-top: 30px;
+}
+
+.headButton {
+  width: 100px;
+  height: 60px;
+  font-size: 14px;
+  text-align: center;
+  
+}
+
+img:hover {
+  width: 150px;
+}
+
+.bottomButton {
+  position: absolute;
+  bottom: 0px;
+}
+
+.category {
+  margin-bottom: 100px;
+}
+
+.headContainer {
+  display: flex;
+}
+
+@media only screen and (max-width:600px) {
+  .product {
+  width: 100vw;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 0 0 rgba(17, 17, 17, 0.425),
+    1px 1px 10px 1px rgba(0, 0, 0, 0.171);
+  background-color: rgb(255, 255, 255);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}}
+
+@media only screen and (min-width:600px) and (max-width:800px) {
+  .product {
+  width: 40vw;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 0 0 rgba(17, 17, 17, 0.425),
+    1px 1px 10px 1px rgba(0, 0, 0, 0.171);
+  background-color: rgb(255, 255, 255);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}}
+
+h3 {
+  margin-top: 80px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+  font-weight: lighter;
+  z-index: 1;
+
+ 
 }
